versioned_docs/version-3.17/scalardb-sql/scalardb-sql-status-codes.mdx
---
tags:
  - Enterprise Premium
displayed_sidebar: docsEnglish
---

# ScalarDB SQL Error Codes

This page provides a list of error codes in ScalarDB SQL.

## Error code classes and descriptions

| Class          | Description                        |
|:---------------|:-----------------------------------|
| `DB-SQL-1xxxx` | Errors for the user error category |

## `DB-SQL-1xxxx` status codes

The following are status codes and messages for the user error category.

### `DB-SQL-10000`

**Message**

```markdown
The namespace does not exist. Namespace: %s
```

### `DB-SQL-10001`

**Message**

```markdown
The table does not exist. Table: %s
```

### `DB-SQL-10002`

**Message**

```markdown
The column %s does not exist
```

### `DB-SQL-10003`

**Message**

```markdown
The column does not exist. Table: %s; Column: %s
```

### `DB-SQL-10004`

**Message**

```markdown
The column index is out of bounds. Index: %d; Size: %d
```

### `DB-SQL-10005`

**Message**

```markdown
A positional bind marker is not allowed when binding named values
```

### `DB-SQL-10006`

**Message**

```markdown
A named bind marker is not allowed when binding positional values
```

### `DB-SQL-10007`

**Message**

```markdown
Cannot convert BLOB values to SQL. Please use a bind marker for a BLOB value and bind it separately
```

### `DB-SQL-10008`

**Message**

```markdown
No namespace name has been specified. Set a default namespace name, or explicitly specify a namespace name
```

### `DB-SQL-10009`

**Message**

```markdown
Zero bytes may not occur in string parameters
```

### `DB-SQL-10010`

**Message**

```markdown
Mixing positional values and named values is not allowed
```

### `DB-SQL-10011`

**Message**

```markdown
Preparing a transaction is supported only in two-phase commit transaction mode
```

### `DB-SQL-10012`

**Message**

```markdown
Validating a transaction is supported only in two-phase commit transaction mode
```

### `DB-SQL-10013`

**Message**

```markdown
The previous transaction is still in progress. Commit, roll back, or suspend the previous transaction first
```

### `DB-SQL-10014`

**Message**

```markdown
This SQL session has already been closed
```

### `DB-SQL-10015`

**Message**

```markdown
A transaction has not begun
```

### `DB-SQL-10016`

**Message**

```markdown
The type %s is not supported
```

### `DB-SQL-10017`

**Message**

```markdown
No connection mode implementations are found. Please add a connection mode implementation to the classpath
```

### `DB-SQL-10018`

**Message**

```markdown
The connection mode is not specified, but multiple connection mode implementations are found. Specify one of the following connection modes: %s
```

### `DB-SQL-10019`

**Message**

```markdown
The connection mode '%s' is not found. Specify one of the following connection modes: %s
```

### `DB-SQL-10020`

**Message**

```markdown
Access denied: You need the %s privilege on the namespace %s to execute this operation
```

### `DB-SQL-10021`

**Message**

```markdown
Access denied: You need the %s privilege on the table %s to execute this operation
```

### `DB-SQL-10022`

**Message**

```markdown
Access denied: You can't grant the %s privilege because you don't have the same privilege on the table %s
```

### `DB-SQL-10023`

**Message**

```markdown
Access denied: You can't grant the %s privilege because you don't have the same privilege on the namespace %s
```

### `DB-SQL-10024`

**Message**

```markdown
Access denied: You can't revoke the %s privilege because you don't have the same privilege on the table %s
```

### `DB-SQL-10025`

**Message**

```markdown
Access denied: You can't revoke the %s privilege because you don't have the same privilege on the namespace %s
```

### `DB-SQL-10026`

**Message**

```markdown
Syntax error. Line %d:%d %s
```

### `DB-SQL-10027`

**Message**

```markdown
Syntax error. Multiple PRIMARY KEYs specified (exactly one required)
```

### `DB-SQL-10028`

**Message**

```markdown
Cannot grant the INSERT privilege if the user doesn't have the UPDATE privilege
```

### `DB-SQL-10029`

**Message**

```markdown
Cannot grant the UPDATE privilege if the user doesn't have the INSERT privilege
```

### `DB-SQL-10030`

**Message**

```markdown
Cannot grant the UPDATE privilege if the user doesn't have the SELECT privilege
```

### `DB-SQL-10031`

**Message**

```markdown
Cannot grant the DELETE privilege if the user doesn't have the SELECT privilege
```

### `DB-SQL-10032`

**Message**

```markdown
Cannot revoke the SELECT privilege if the user has the UPDATE privilege
```

### `DB-SQL-10033`

**Message**

```markdown
Cannot revoke the SELECT privilege if the user has the DELETE privilege
```

### `DB-SQL-10034`

**Message**

```markdown
Cannot revoke the INSERT privilege if the user has the UPDATE privilege
```

### `DB-SQL-10035`

**Message**

```markdown
Cannot revoke the UPDATE privilege if the user has the INSERT privilege
```

### `DB-SQL-10036`

**Message**

```markdown
A non-clustering-key column is specified in the CLUSTERING ORDER directive. Column: %s
```

### `DB-SQL-10037`

**Message**

```markdown
The order of the columns in the CLUSTERING ORDER directive must match the order for the clustering key (%s must appear before %s)
```

### `DB-SQL-10038`

**Message**

```markdown
The CLUSTERING ORDER is missing for the column %s
```

### `DB-SQL-10039`

**Message**

```markdown
Empty SQL is specified
```

### `DB-SQL-10040`

**Message**

```markdown
Multiple SQLs are not allowed
```

### `DB-SQL-10041`

**Message**

```markdown
The column %s is ambiguous
```

### `DB-SQL-10042`

**Message**

```markdown
The column %s cannot be specified in the %s clause. Only the columns in the table %s can be specified in the %s clause
```

### `DB-SQL-10043`

**Message**

```markdown
An unbound bind marker is still in the escape character of the LIKE predicate for the column %s
```

### `DB-SQL-10044`

**Message**

```markdown
The escape character must be a TEXT value for the LIKE predicate for the column %s
```

### `DB-SQL-10045`

**Message**

```markdown
The value of the predicate must not be null unless the operator is 'IS NULL' or 'IS NOT NULL'. Predicate: %s
```

### `DB-SQL-10046`

**Message**

```markdown
An unbound bind marker is still in the LIMIT clause
```

### `DB-SQL-10047`

**Message**

```markdown
The LIMIT must be an INT value
```

### `DB-SQL-10048`

**Message**

```markdown
Unmatched column names or values
```

### `DB-SQL-10049`

**Message**

```markdown
The column %s is specified twice
```

### `DB-SQL-10050`

**Message**

```markdown
All primary key columns must be specified in the INSERT or UPSERT statement
```

### `DB-SQL-10051`

**Message**

```markdown
An unbound bind marker is still in the value of the column %s
```

### `DB-SQL-10052`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a boolean value (BOOLEAN) is specified
```

### `DB-SQL-10053`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a decimal number (INT or BIGINT) is specified
```

### `DB-SQL-10054`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a floating point number (FLOAT or DOUBLE) is specified
```

### `DB-SQL-10055`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a string (TEXT, DATE, TIME, TIMESTAMP, or TIMESTAMPTZ) is specified
```

### `DB-SQL-10056`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BOOLEAN value is specified
```

### `DB-SQL-10057`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but an INT value is specified
```

### `DB-SQL-10058`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BIGINT value is specified
```

### `DB-SQL-10059`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a FLOAT value is specified
```

### `DB-SQL-10060`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a DOUBLE value is specified
```

### `DB-SQL-10061`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TEXT value is specified
```

### `DB-SQL-10062`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BLOB value is specified
```

### `DB-SQL-10063`

**Message**

```markdown
RIGHT OUTER JOIN can only be specified as the first join
```

### `DB-SQL-10064`

**Message**

```markdown
The JOIN predicate is not specified properly. Predicate: %s
```

### `DB-SQL-10065`

**Message**

```markdown
The data types of the columns in the JOIN predicate do not match. Predicate: %s
```

### `DB-SQL-10066`

**Message**

```markdown
The column %s is specified twice in the JOIN predicates. Predicates: %s
```

### `DB-SQL-10067`

**Message**

```markdown
Either all primary key columns or an indexed column for the table %s must be specified in the JOIN predicates. Predicates: %s
```

### `DB-SQL-10068`

**Message**

```markdown
Cannot issue mutation DML SQLs such as INSERT, UPDATE or DELETE with executeQuery()
```

### `DB-SQL-10069`

**Message**

```markdown
Cannot issue SELECT SQLs with executeUpdate()
```

### `DB-SQL-10070`

**Message**

```markdown
The TWO_PHASE_COMMIT_TRANSACTION mode is not supported in the current transaction manager
```

### `DB-SQL-10071`

**Message**

```markdown
The encrypted column %s is not allowed in the %s clause
```

### `DB-SQL-10072`

**Message**

```markdown
The user %s does not exist
```

### `DB-SQL-10073`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a DATE value is specified
```

### `DB-SQL-10074`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TIME value is specified
```

### `DB-SQL-10075`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TIMESTAMP value is specified
```

### `DB-SQL-10076`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TIMESTAMPTZ value is specified
```

### `DB-SQL-10077`

**Message**

```markdown
The policy %s does not exist
```

### `DB-SQL-10078`

**Message**

```markdown
Beginning a transaction in read-only mode is not supported in two-phase commit transaction mode
```

### `DB-SQL-10079`

**Message**

```markdown
Starting a transaction in read-only mode is not supported in two-phase commit transaction mode
```

### `DB-SQL-10080`

**Message**

```markdown
Cannot change read-only mode while a transaction is in progress
```

### `DB-SQL-10081`

**Message**

```markdown
Wrong number of arguments for the %s function. Min: %d; max: %d
```

### `DB-SQL-10082`

**Message**

```markdown
The column %s must appear in the GROUP BY clause
```

### `DB-SQL-10083`

**Message**

```markdown
Unknown function: %s
```

### `DB-SQL-10084`

**Message**

```markdown
The ordering %s must appear in the projections
```

### `DB-SQL-10085`

**Message**

```markdown
The %s function does not support the data type: %s
```

### `DB-SQL-10086`

**Message**

```markdown
Numeric overflow in the %s function for the column: %s
```

### `DB-SQL-10087`

**Message**

```markdown
The %s function does not support the argument type: %s
```

### `DB-SQL-10088`

**Message**

```markdown
The %s in the HAVING clause must appear in the SELECT projections
```

### `DB-SQL-10089`

**Message**

```markdown
Invalid LIKE pattern: '%s'. Detail: %s
```

### `DB-SQL-10094`

**Message**

```markdown
The column %s is specified more than once in the CREATE TABLE statement
```
